[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-util = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27"

bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
glam = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8.0"
rand = "0.8.5"
image = { version = "0.24.6", default-features = false, features = ["png"] }
gilrs = { version = "0.10.1", default-features = false, features = ["xinput"] }
